# database

./: CMakeLists.txt  README.md  data.csv  db.cpp  db.h  что добавить в database.txt
include/: cells.h  column.h  conditional_execute.h  database.h  line.h  query.h  query_condition.h  query_parser.h  row.h  table.h  table_schema.h  value.h
src/: main.cpp  query_parser.cpp
tests/: test.cpp
